--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg navbar-light header">
         <div class="container">
           <a class="navbar-brand" href="#">
-              <img src="./Image/logo.jpg" height="70px" alt="">
+              <img src="https://i.ibb.co/g39nL6D/logo.jpg" height="70px" alt="">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -83,7 +83,7 @@
                   </div>
                   <div class="col-lg-6">
                       <div class="banner-hero">
-                          <img src="./Image/hero-img.jpg" alt="">
+                          <img src="https://i.ibb.co/T0Vrw82/hero-img.webp" alt="">
                       </div>
                   </div>
               </div>
@@ -95,7 +95,7 @@
               <div class="row">
                   <div class="col-lg-6">
                       <div class="about-hero">
-                          <img class=" img-thumbnail" src="./Image/about-img.jpg" alt="">
+                          <img class=" img-thumbnail" src="https://i.ibb.co/2PW289h/about-img.webp" alt="">
                       </div>
                   </div>
                   <div class="col-lg-6">
@@ -197,45 +197,37 @@
              <div class="row">
                  <div class="col-lg-3">
                      <div class="team-box shadow">
-                         <img src="./Image/face1.jpg" alt="">
-
+                         <img src="https://i.ibb.co/z6drYWY/face1.jpg" alt="">
                          <h2>Jason Dow </h2>
                          <p>Programmer</p>
                          <p>Lorem ipsum dolor amet coctetur adipisicing dolores?</p>
-
                          <a class="shadow" href="#">website</a>
                      </div>
                  </div>
                  <div class="col-lg-3">
                      <div class="team-box shadow">
-                         <img src="./Image/face1.jpg" alt="">
-
+                          <img src="https://i.ibb.co/z6drYWY/face1.jpg" alt="">
                          <h2>Jason Dow </h2>
                          <p>Programmer</p>
                          <p>Lorem ipsum dolor sit amet consectetur dolores?</p>
-
                          <a class="shadow" href="#">website</a>
                      </div>
                  </div>
                  <div class="col-lg-3">
                      <div class="team-box shadow">
-                         <img src="./Image/face1.jpg" alt="">
-
+                          <img src="https://i.ibb.co/z6drYWY/face1.jpg" alt="">
                          <h2>Jason Dow </h2>
                          <p>Programmer</p>
                          <p>Lorem ipsum dolor sit amet consectetur dolores?</p>
-
                          <a class="shadow" href="#">website</a>
                      </div>
                  </div>
                  <div class="col-lg-3">
                      <div class="team-box shadow">
-                         <img src="./Image/face1.jpg" alt="">
-
+                         <img src="https://i.ibb.co/z6drYWY/face1.jpg" alt="">
                          <h2>Jason Dow </h2>
                          <p>Programmer</p>
                          <p>Lorem ipsum dolor sit amet ctetur Commodi, dolores?</p>
-
                          <a class="shadow" href="#">website</a>
                      </div>
                  </div>
